FEAT : Redis를 활용한 Socket 채팅 기능 구현

--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div>
-    <button onclick="location.href=`/room`">돌아가기</button>
+    <button onclick="location.href=`/chat/room/`">돌아가기</button>
 </div>
 <div class="container" id="app" v-cloak>
     <div>
