--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <title>Websocket Chat</title>
     <meta charset="utf-8">
@@ -15,8 +15,11 @@
 <body>
 <div class="container" id="app" v-cloak>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <h3>채팅방 리스트</h3>
+        </div>
+        <div class="col-md-6 text-right">
+            <a class="btn btn-primary btn-sm" href="/logout">로그아웃</a>
         </div>
     </div>
     <div class="input-group">
@@ -29,7 +32,7 @@
         </div>
     </div>
     <ul class="list-group">
-        <li class="list-group-item list-group-item-action" v-for="item in chatrooms" v-bind:key="item.roomId" v-on:click="enterRoom(item.roomId)">
+        <li class="list-group-item list-group-item-action" v-for="item in chatrooms" v-bind:key="item.roomId" v-on:click="enterRoom(item.roomId, item.roomName)">
             {{item.roomName}}
         </li>
     </ul>
@@ -37,50 +40,46 @@
 <!-- JavaScript -->
 <script src="/webjars/vue/2.5.16/dist/vue.min.js"></script>
 <script src="/webjars/axios/0.17.1/dist/axios.min.js"></script>
-<script src="/js/main.js"></script>
 <script>
-    var vm = new Vue({
-        el: '#app',
-        data: {
-            room_name : '',
-            chatrooms: [
-            ]
-        },
-        created() {
-            this.findAllRoom();
-        },
-        methods: {
-            findAllRoom: function() {
-                axios.get('/chat/rooms').then(response => { this.chatrooms = response.data; });
-            },
-            createRoom: function() {
-                if("" === this.room_name) {
-                    alert("방 제목을 입력해 주십시요.");
-                    return;
-                } else {
-                    var params = new URLSearchParams();
-                    params.append("name",this.room_name);
-                    axios.post('/chat/room', params)
-                        .then(
-                            response => {
-                                alert(response.data.roomName+"방 개설에 성공하였습니다.")
-                                this.room_name = '';
-                                this.findAllRoom();
-                            }
-                        )
-                        .catch( response => { alert("채팅방 개설에 실패하였습니다."); } );
-                }
-            },
-            enterRoom: function(roomId) {
-                var sender = prompt('대화명을 입력해 주세요.');
-                if(sender !== "") {
-                    localStorage.setItem('wschat.sender',sender);
-                    localStorage.setItem('wschat.roomId',roomId);
-                    location.href="/chat/room/enter/"+roomId;
-                }
-            }
+  var vm = new Vue({
+    el: '#app',
+    data: {
+      room_name : '',
+      chatrooms: [
+      ]
+    },
+    created() {
+      this.findAllRoom();
+    },
+    methods: {
+      findAllRoom: function() {
+        axios.get('/chat/rooms').then(response => { this.chatrooms = response.data; });
+      },
+      createRoom: function() {
+        if("" === this.room_name) {
+          alert("방 제목을 입력해 주십시요.");
+          return;
+        } else {
+          var params = new URLSearchParams();
+          params.append("name",this.room_name);
+          axios.post('/chat/room', params)
+            .then(
+              response => {
+                alert(response.data.roomName+"방 개설에 성공하였습니다.")
+                this.room_name = '';
+                this.findAllRoom();
+              }
+            )
+            .catch( response => { alert("채팅방 개설에 실패하였습니다."); } );
         }
-    });
+      },
+      enterRoom: function(roomId, roomName) {
+        localStorage.setItem('wschat.roomId',roomId);
+        localStorage.setItem('wschat.roomName',roomName);
+        location.href="/chat/room/enter/"+roomId;
+      }
+    }
+  });
 </script>
 </body>
 </html>
