--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <title>Websocket ChatRoom</title>
     <!-- Required meta tags -->
@@ -15,28 +15,29 @@
     </style>
 </head>
 <body>
-<div>
-    <button onclick="location.href=`/chat/room/`">돌아가기</button>
-</div>
 <div class="container" id="app" v-cloak>
-    <div>
-        <h2>{{room.name}}</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>{{roomName}}</h3>
+        </div>
+        <div class="col-md-6 text-right">
+            <a class="btn btn-primary btn-sm" href="/logout">로그아웃</a>
+        </div>
     </div>
     <div class="input-group">
         <div class="input-group-prepend">
             <label class="input-group-text">내용</label>
         </div>
-        <input type="text" class="form-control" v-model="message" v-on:keypress.enter="sendMessage">
+        <input type="text" class="form-control" v-model="message" v-on:keypress.enter="sendMessage('TALK')">
         <div class="input-group-append">
-            <button class="btn btn-primary" type="button" @click="sendMessage">보내기</button>
+            <button class="btn btn-primary" type="button" @click="sendMessage('TALK')">보내기</button>
         </div>
     </div>
     <ul class="list-group">
         <li class="list-group-item" v-for="message in messages">
-            {{message.sender}} - {{message.message}}
+            {{message.sender}} - {{message.message}}</a>
         </li>
     </ul>
-    <div></div>
 </div>
 <!-- JavaScript -->
 <script src="/webjars/vue/2.5.16/dist/vue.min.js"></script>
@@ -44,60 +45,49 @@
 <script src="/webjars/sockjs-client/1.1.2/sockjs.min.js"></script>
 <script src="/webjars/stomp-websocket/2.3.3-1/stomp.min.js"></script>
 <script>
-    //alert(document.title);
-    // websocket & stomp initialize
-    var sock = new SockJS("/ws/chat");
-    var ws = Stomp.over(sock);
-    var reconnect = 0;
-    // vue.js
-    var vm = new Vue({
-        el: '#app',
-        data: {
-            roomId: '',
-            room: {},
-            sender: '',
-            message: '',
-            messages: []
-        },
-        created() {
-            this.roomId = localStorage.getItem('wschat.roomId');
-            this.sender = localStorage.getItem('wschat.sender');
-            this.findRoom();
-        },
-        methods: {
-            findRoom: function() {
-                axios.get('/chat/room/'+this.roomId).then(response => { this.room = response.data; });
-            },
-            sendMessage: function() {
-                ws.send("/app/chat/message", {}, JSON.stringify({type:'TALK', roomId:this.roomId, sender:this.sender, message:this.message}));
-                this.message = '';
-            },
-            recvMessage: function(recv) {
-                this.messages.unshift({"type":recv.type,"sender":recv.type=='ENTER'?'[알림]':recv.sender,"message":recv.message})
-            }
-        }
-    });
+  // websocket & stomp initialize
+  var sock = new SockJS("/ws/chat");
+  var ws = Stomp.over(sock);
+  var reconnect = 0;
+  // vue.js
+  var vm = new Vue({
+    el: '#app',
+    data: {
+      roomId: '',
+      roomName: '',
+      message: '',
+      messages: [],
+      token: ''
+    },
+    created() {
+      this.roomId = localStorage.getItem('wschat.roomId');
+      this.roomName = localStorage.getItem('wschat.sender');
 
-    function connect() {
-        // pub/sub event
-        ws.connect({}, function(frame) {
-            ws.subscribe("/topic/chat/room/"+vm.$data.roomId, function(message) {
-                var recv = JSON.parse(message.body);
-                vm.recvMessage(recv);
-            });
-            ws.send("/app/chat/message", {}, JSON.stringify({type:'ENTER', roomId:vm.$data.roomId, sender:vm.$data.sender}));
+      var _this = this;
+      axios.get('/chat/user').then(response => {
+        _this.token = response.data.token;
+        ws.connect({"token":_this.token}, function(frame) {
+          ws.subscribe("/topic/chat/room/"+_this.roomId, function(message) {
+            var recv = JSON.parse(message.body);
+            _this.recvMessage(recv);
+          });
+          _this.sendMessage('ENTER');
         }, function(error) {
-            if(reconnect++ <= 5) {
-                setTimeout(function() {
-                    console.log("connection reconnect");
-                    sock = new SockJS("/ws/chat");
-                    ws = Stomp.over(sock);
-                    connect();
-                },10*1000);
-            }
+          alert("서버 연결에 실패 하였습니다. 다시 접속해 주십시요.");
+          location.href="/chat/room";
         });
+      });
+    },
+    methods: {
+      sendMessage: function(type) {
+        ws.send("/app/chat/message", {"token":this.token}, JSON.stringify({type:type, roomId:this.roomId, message:this.message}));
+        this.message = '';
+      },
+      recvMessage: function(recv) {
+        this.messages.unshift({"type":recv.type,"sender":recv.sender,"message":recv.message})
+      }
     }
-    connect();
+  });
 </script>
 </body>
 </html>
